--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -13681,7 +13681,7 @@ a.anchor-link {
 <ul>
 <li>numpy/scipy: high quality matrix and numerical library</li>
 <li>matplotlib: powerful visualization library</li>
-<li>IPython: highly productive interactive working environment</li>
+<li>Jupyter notebook: highly productive interactive working environment</li>
 <li>Pandas: powerful data and time series analysis package</li>
 <li>Machine learning frameworks: Tensorflow, PyTorch, Scikit-learn etc.</li>
 </ul>
@@ -13701,7 +13701,7 @@ a.anchor-link {
 <p>Python version:</p>
 <ul>
 <li><strong> Python 3.6.x or higher </strong> : python is not backward compatible, do not use Python 2</li>
-<li>With the latest IPython, numpy/pandas/scipy etc.</li>
+<li>With the latest Jupyter notebook, numpy/pandas/scipy etc.</li>
 <li>either 32bit or 64bit version works</li>
 </ul>
 <p>Python setup instructions:</p>
@@ -13874,7 +13874,7 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 <td style="text-align:right">23</td>
 <td style="text-align:right">8</td>
 <td style="text-align:right">127</td>
-<td style="text-align:center">1 to 245</td>
+<td style="text-align:center">-126 to 127</td>
 </tr>
 <tr>
 <td style="text-align:center">IEEE 754 - 64 bit</td>
@@ -13882,7 +13882,7 @@ $$$$(-1)^{\text{sign}}(\text{1 + fraction})2^{\text{exponent} - p}$$<ul>
 <td style="text-align:right">52</td>
 <td style="text-align:right">11</td>
 <td style="text-align:right">1023</td>
-<td style="text-align:center">1 to 2046</td>
+<td style="text-align:center">-1022 to 1023</td>
 </tr>
 </tbody>
 </table>
