--- a/Lecture8.slides.html
+++ b/Lecture8.slides.html
@@ -12579,8 +12579,8 @@ $$</p>
 </li>
 <li><p>The goal is to find a local minimum satisfying the constriants.</p>
 </li>
-<li><p>And we will denote the feasible region as domain 
-$\mathcal{D} = \{\bx \in \mathbb{R}^n | \; \bs{h}(\bx)  = \bs{0}, \; \bs{g}(\bx) \leq \bs{0}\}$.</p>
+<li><p>And we will denote the ovarall domain of definition as
+$\mathcal{D} = DOM(f)\cap DOM(h) \cap DOM(g)$.</p>
 </li>
 </ul>
 
