--- a/Lecture1.slides.html
+++ b/Lecture1.slides.html
@@ -11895,26 +11895,6 @@ a.anchor-link {
 </head>
 
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-<style type="text/css">
-//div.output_wrapper {
-//  margin-top: 0px;
-//}
-.input_hidden {
-  display: none;
-//  margin-top: 5px;
-}
-</style>
-
-<!-- script>
-$(document).ready(function(){
-  $(".output_wrapper").click(function(){
-      $(this).prev('.input_hidden').slideToggle();
-  });
-})
-</script -->
-
 
 
 <body>
@@ -12026,49 +12006,43 @@ $(document).ready(function(){
 <td style="text-align:center">1</td>
 <td style="text-align:center">Introduction and Error Analysis</td>
 <td style="text-align:center">Error and floating point numbers</td>
-<td style="text-align:center">Y. Li</td>
+<td style="text-align:center">H. Cheng</td>
 </tr>
 <tr>
 <td style="text-align:center">2-3</td>
 <td style="text-align:center">Linear Algebra</td>
 <td style="text-align:center">Portfolio optimization, PCA, least square</td>
-<td style="text-align:center">Y. Li</td>
+<td style="text-align:center">H. Cheng</td>
 </tr>
 <tr>
 <td style="text-align:center">4-5</td>
 <td style="text-align:center">Rootfinding and interpolation</td>
 <td style="text-align:center">Curve building</td>
-<td style="text-align:center">Y. Li</td>
+<td style="text-align:center">H. Cheng</td>
 </tr>
 <tr>
 <td style="text-align:center">6</td>
 <td style="text-align:center">Derivatives and integration</td>
 <td style="text-align:center">Hedging, Risk Transformation</td>
-<td style="text-align:center">Y. Li</td>
+<td style="text-align:center">H. Cheng</td>
 </tr>
 <tr>
 <td style="text-align:center">7-8</td>
 <td style="text-align:center">Monte Carlo simulation</td>
 <td style="text-align:center">Exotic pricing</td>
-<td style="text-align:center">Y. Li</td>
+<td style="text-align:center">H. Cheng</td>
 </tr>
 <tr>
 <td style="text-align:center">9-10</td>
 <td style="text-align:center">Optimization</td>
 <td style="text-align:center">Model calibration</td>
-<td style="text-align:center">H. Cheng</td>
+<td style="text-align:center">W. Lou</td>
 </tr>
 <tr>
-<td style="text-align:center">11-12</td>
+<td style="text-align:center">11-13</td>
 <td style="text-align:center">ODE/PDE</td>
 <td style="text-align:center">Pricing</td>
-<td style="text-align:center">H. Cheng</td>
-</tr>
-<tr>
-<td style="text-align:center">13</td>
-<td style="text-align:center">Entropy and Allocation</td>
-<td style="text-align:center">Advanced practical problems</td>
-<td style="text-align:center">Y. Li</td>
+<td style="text-align:center">W. Lou</td>
 </tr>
 </tbody>
 </table>
@@ -12628,7 +12602,6 @@ $$</p>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
@@ -12638,8 +12611,6 @@ $$</p>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12686,7 +12657,6 @@ $$</p>
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
@@ -12696,8 +12666,6 @@ $$</p>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12762,7 +12730,6 @@ $$</p>
 </div>
 </div><div class="fragment">
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
@@ -12779,8 +12746,6 @@ $$</p>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12838,7 +12803,6 @@ $$</p>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
@@ -12848,8 +12812,6 @@ $$</p>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12896,7 +12858,6 @@ $$</p>
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[8]:</div>
 <div class="inner_cell">
@@ -12906,8 +12867,6 @@ $$</p>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -12954,7 +12913,6 @@ $$</p>
 
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[9]:</div>
 <div class="inner_cell">
@@ -12964,8 +12922,6 @@ $$</p>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13012,7 +12968,6 @@ $$</p>
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[10]:</div>
 <div class="inner_cell">
@@ -13022,8 +12977,6 @@ $$</p>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13078,7 +13031,6 @@ $$</p>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[11]:</div>
 <div class="inner_cell">
@@ -13092,8 +13044,6 @@ $$</p>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13117,7 +13067,6 @@ b - c = -1.110223e-16
 
 </div><div class="fragment">
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[12]:</div>
 <div class="inner_cell">
@@ -13127,8 +13076,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13175,7 +13122,6 @@ b - c = -1.110223e-16
 
 </div></div><div class="fragment">
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[13]:</div>
 <div class="inner_cell">
@@ -13185,8 +13131,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13241,7 +13185,6 @@ b - c = -1.110223e-16
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[14]:</div>
 <div class="inner_cell">
@@ -13252,8 +13195,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13276,7 +13217,6 @@ b - c = -1.110223e-16
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[15]:</div>
 <div class="inner_cell">
@@ -13287,8 +13227,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13322,7 +13260,6 @@ b - c = -1.110223e-16
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[16]:</div>
 <div class="inner_cell">
@@ -13332,8 +13269,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13356,7 +13291,6 @@ b - c = -1.110223e-16
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[17]:</div>
 <div class="inner_cell">
@@ -13366,8 +13300,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13390,7 +13322,6 @@ b - c = -1.110223e-16
 
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[18]:</div>
 <div class="inner_cell">
@@ -13410,8 +13341,6 @@ b - c = -1.110223e-16
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13449,7 +13378,6 @@ b - 4294967295 == b ? True
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[19]:</div>
 <div class="inner_cell">
@@ -13461,8 +13389,6 @@ b - 4294967295 == b ? True
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13486,7 +13412,6 @@ a/3 =  [0.         0.33333333]
 
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[20]:</div>
 <div class="inner_cell">
@@ -13497,8 +13422,6 @@ a/3 =  [0.         0.33333333]
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13567,7 +13490,6 @@ a/3 =  [0.         0.33333333]
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[21]:</div>
 <div class="inner_cell">
@@ -13585,8 +13507,6 @@ a/3 =  [0.         0.33333333]
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13621,7 +13541,6 @@ a/3 =  [0.         0.33333333]
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[22]:</div>
 <div class="inner_cell">
@@ -13634,8 +13553,6 @@ a/3 =  [0.         0.33333333]
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13694,7 +13611,6 @@ $$</p>
 </div>
 </div></section><section>
 <div class="cell border-box-sizing code_cell rendered">
-<div class="input_hidden">
 <div class="input">
 <div class="prompt input_prompt">In&nbsp;[23]:</div>
 <div class="inner_cell">
@@ -13709,8 +13625,6 @@ $$</p>
 
 </div>
 </div>
-</div>
-
 </div>
 
 <div class="output_wrapper">
@@ -13995,7 +13909,6 @@ require(
 
 
 
-
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
@@ -14021,10 +13934,10 @@ require(
 Reveal.initialize({
 
     // Display controls in the bottom right corner
-    controls: false,
+    controls: true,
 
     // Display a presentation progress bar
-    progress: false,
+    //progress: true,
 
     // Push each slide change to the browser history
     history: false,
@@ -14034,7 +13947,7 @@ Reveal.initialize({
     slideNumber: true,
 
     // Enable touch events for navigation
-    touch: true,
+    //touch: true,
 
     // Enable the slide overview mode
     //overview: true,
@@ -14054,7 +13967,7 @@ Reveal.initialize({
     //autoSlide: 0,
 
     // Enable slide navigation via mouse wheel
-    mouseWheel: false,
+    //mouseWheel: false,
 
     // Transition style
     // transition: 'concave', // default/cube/page/concave/zoom/linear/fade/none
@@ -14071,6 +13984,7 @@ Reveal.initialize({
      // margin: 0,
      theme: 'white', // available themes are in /css/theme
 });
+
 
 // remap F5/ESC/b key
 Reveal.configure({
